deployment/app/datafetcher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datafetcher
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datafetcher
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: datafetcher
    spec:
      containers:
        - args:
            - "--redis=redis.redis.svc.cluster.local:6379"
            - "--mqtt=emqx-headless.emqx.svc.cluster.local:1883"
          image: nelab/hcm-datafetcher:latest
          name: datafetcher
          ports:
            - containerPort: 8888
