deployment/app/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
  namespace: app
spec:
  ports:
    - name: "backend-http"
      port: 8000
      targetPort: 8000
  selector:
    app: api
