deployment/app/datafetcher-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: datafetcher
  name: datafetcher
  namespace: app
spec:
  ports:
    - port: 8888
      targetPort: 8888
  selector:
    app: datafetcher
