deployment/app/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: app
spec:
  ports:
    - name: "frontend-http"
      port: 80
      targetPort: 80
  selector:
    app: frontend
