deployment/app/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: app
spec:
  tls:
    - hosts:
      - nelab.ddns.umass.edu
      secretName: api-secret
  rules:
  - host: nelab.ddns.umass.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /signup
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /dashboard
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /backend/seniors
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8000
      - path: /backend/static
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8000
      - path: /backend/api
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8000
  ingressClassName: nginx
